--- a/CustomsGestionHoteliere/newForm/frmGestionUtilisateur.resx
+++ b/CustomsGestionHoteliere/newForm/frmGestionUtilisateur.resx
@@ -145,6 +145,9 @@
         dDIVlkQBe0N6DhK4r5JwLXmOfq5M1JzBNuAgfa1SpXQkEn8A3xhCqGty13MAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="easygestBdDataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <metadata name="uTILISATEURSTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>379, 17</value>
   </metadata>
